Wrote some more

--- a/index.Rmd
+++ b/index.Rmd
@@ -23,9 +23,9 @@ header-includes:
 
 # Abstract
 
-Interactive data visualization has become a staple of modern data presentation. However, creating rich interactive figures still remains a challenging task. Certain useful and sophisticated interactive features are often absent from existing tools, or are supported to only a limited degree. This implementation gap may stem from a subtle yet profound issue: what we can *do* with a visualization is fundamentally determined by what the visualization *is*. Since graphs are not mere images, but instead visual representations of structured information, interactive features need to be congruent with the mathematical properties of the underlying data. While seemingly self-evident, this idea is at tension with the prevailing practices. Many current systems based on the Grammar of Graphics model aim to treat graphics, statistics, and interaction as independent, modular components, which can be freely combined. I argue that this independence model, despite many appealing properties, is fundamentally flawed; visualization components are not independent, but instead deeply interconnected.
+Interactive data visualization has become a staple of modern data presentation. However, creating rich interactive figures still remains challenging. Certain useful interactive features are often missing or only partially supported in current tools. This implementation gap may stem from a subtle yet profound issue: what we can *do* with a visualization is fundamentally determined by what the visualization *is*. Graphs are not mere images; they are visual representations of structured information. Therefore, interactive features must align with the mathematical properties of the data they represent. This seemingly self-evident point clashes with prevailing practice. Many current systems, particularly ones based on the Grammar of Graphics model, treat graphics, statistics, and interaction as independent, modular components that can be freely combined.
 
-In this thesis, I explore this inherent interconnectedness of figure components, the challenges it poses for interactive visualization systems, and propose a simple model based on some fundamental ideas from category theory. Furthermore, I also present `plotscaper`, an R package developed to both refine these theoretical ideas and offer a practical tool for interactive data exploration. My goal is to demonstrate that, in order to design truly consistent and general interactive data visualization systems, we need to ground our thinking in algebraic concepts. 
+In this thesis, I argue that this widely used independence model, despite its benefits, is fundamentally flawed: visualization components are deeply interconnected, not independent. I explore this interconnectedness, the challenges is poses for interactive data visualization systems, and propose a simple, alternative model based on some fundamental concepts from category theory. To put these ideas into practice, I also present `plotscaper`, an R package developed to refine these theoretical ideas and offer a practical tool for interactive data exploration. My goal is to demonstrate that designing truly consistent and general interactive data visualization systems requires grounding our thinking in algebraic concepts.
 
 ```{r}
 #| echo: false
