--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,29 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@article{hackathorn2011,
+  title={Learning by Doing: An Empirical Study of Active Teaching Techniques.},
+  author={Hackathorn, Jana and Solomon, Erin D and Blankmeyer, Kate L and Tennial, Rachel E and Garczynski, Amy M},
+  journal={Journal of Effective Teaching},
+  volume={11},
+  number={2},
+  pages={40--54},
+  year={2011},
+  publisher={ERIC}
+}
+
+
+@article{reese2011,
+  title={The learning-by-doing principle.},
+  author={Reese, Hayne W},
+  journal={Behavioral development bulletin},
+  volume={17},
+  number={1},
+  pages={1},
+  year={2011},
+  publisher={Joseph D. Cautilli}
+}
+
 @book{andrienko2006,
   title={Exploratory analysis of spatial and temporal data: a systematic approach},
   author={Andrienko, Natalia and Andrienko, Gennady},
