--- a/_main.Rmd
+++ b/_main.Rmd
@@ -23,9 +23,9 @@ header-includes:
 
 # Abstract
 
-Interactive data visualization has become a staple of modern data presentation. However, creating rich interactive figures still remains a challenging task. Certain useful and sophisticated interactive features are often absent from existing tools, or are supported to only a limited degree. This implementation gap may stem from a subtle yet profound issue: what we can *do* with a visualization is fundamentally determined by what the visualization *is*. Since graphs are not mere images, but instead visual representations of structured information, interactive features need to be congruent with the mathematical properties of the underlying data. While seemingly self-evident, this idea is at tension with the prevailing practices. Many current systems based on the Grammar of Graphics model aim to treat graphics, statistics, and interaction as independent, modular components, which can be freely combined. I argue that this independence model, despite many appealing properties, is fundamentally flawed; visualization components are not independent, but instead deeply interconnected.
+Interactive data visualization has become a staple of modern data presentation. However, creating rich interactive figures still remains challenging. Certain useful interactive features are often missing or only partially supported in current tools. This implementation gap may stem from a subtle yet profound issue: what we can *do* with a visualization is fundamentally determined by what the visualization *is*. Graphs are not mere images; they are visual representations of structured information. Therefore, interactive features must align with the mathematical properties of the data they represent. This seemingly self-evident point clashes with prevailing practice. Many current systems, particularly ones based on the Grammar of Graphics model, treat graphics, statistics, and interaction as independent, modular components that can be freely combined.
 
-In this thesis, I explore this inherent interconnectedness of figure components, the challenges it poses for interactive visualization systems, and propose a simple model based on some fundamental ideas from category theory. Furthermore, I also present `plotscaper`, an R package developed to both refine these theoretical ideas and offer a practical tool for interactive data exploration. My goal is to demonstrate that, in order to design truly consistent and general interactive data visualization systems, we need to ground our thinking in algebraic concepts. 
+In this thesis, I argue that this widely used independence model, despite its benefits, is fundamentally flawed: visualization components are deeply interconnected, not independent. I explore this interconnectedness, the challenges is poses for interactive data visualization systems, and propose a simple, alternative model based on some fundamental concepts from category theory. To put these ideas into practice, I also present `plotscaper`, an R package developed to refine these theoretical ideas and offer a practical tool for interactive data exploration. My goal is to demonstrate that designing truly consistent and general interactive data visualization systems requires grounding our thinking in algebraic concepts.
 
 ```{r}
 #| echo: false
@@ -101,19 +101,19 @@ knitr::opts_chunk$set(
 >
 > Faust, Part I, Johann Wolfgang von Goethe [-@goethe2015]
 
-Humans are intensely visual creatures. About 20-30% of our brain is involved in visual processing [@van2003; @sheth2016], providing support for a highly sophisticated and powerful visual system [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019]. This enables us to perform some remarkable perceptual feats. For instance, it is well-established that our brain can process certain highly salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that we can make extremely rapid, accurate, and parallel visual judgements, through phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. Features such as these establish the visual system as the most potent information channel at our disposal.
+Humans are intensely visual creatures. About 20-30% of our brain is involved in visual processing [@van2003; @sheth2016], providing support for a highly sophisticated and powerful visual system [see e.g. @goebel2004; @knudsen2020; for a brief review, see @ware2019], which in turn enables us to perform some remarkable perceptual feats. For instance, it is well-established that our brain can process certain highly salient visual stimuli in sub-20-millisecond times, outside of conscious attention [@ledoux2000; @ledoux2003], and that we can make extremely rapid, accurate, and parallel visual judgements, through phenomena known as subitizing and pre-attentive processing [@mandler1982; @treisman1985]. Features such as these establish the visual system as the most potent information channel at our disposal.
 
-Crucially, while the visual cortex excels at processing data about the natural world, it is equally adept at processing abstract information. Statisticians have long capitalized on this fact. Emerging from early charts and maps, data visualization has evolved alongside mathematical statistics, providing a complementary set of tools and methods [for a review, see @friendly2006 or Section \@ref(brief-history)]. While mathematical statistics was primarily developed with the goal of supporting or disproving scientific hypotheses, data visualization offered an alternative approach: unsupervised exploration. Rather than providing answers to binary decisions, it demonstrated its worth in "forcing us to notice that which we would never expect to see" [@tukey1977]. This invaluable role in revealing the unexpected eventually established data visualization as an indispensable part of the applied statistician's arsenal.
+Crucially, while the visual cortex excels at processing data about the natural world, it is equally adept at processing abstract information. Statisticians have long capitalized on this fact. Emerging from early charts and maps, data visualization has co-evolved alongside mathematical statistics, providing a complementary set of tools and methods [for a review, see @friendly2006 or Section \@ref(brief-history)]. Specifically, while mathematical statistics was primarily developed with the goal of supporting or disproving scientific hypotheses, data visualization offered an alternative approach: unsupervised exploration. Rather than providing answers to binary decisions, it demonstrated its worth in "forcing us to notice that which we would never expect to see" [@tukey1977]. This invaluable role in revealing the unexpected eventually established data visualization as an indispensable part of the applied statistician's arsenal.
 
-Now, while vision is one of the primary ways we gather information, our interaction with the natural world extends beyond sight. When trying to understand unknown objects, we do not just look; we also touch, manipulate, and probe. Consequently, within our brain, action and perception are not independent, but instead deeply interconnected, mutually reinforcing processes [see e.g. @dijkerman2007; @lederman2009]. We learn most effectively by action and observing the resulting changes; passive observation is less effective. As the saying goes, seeing is believing, but how much is that belief really worth if you can't put your finger on it?
+Our interaction with the natural world extends beyond sight, however. When we try to understand unknown objects, we do not just look; we also touch, manipulate, and probe. Consequently, within our brain, action and perception are not independent, but instead deeply interconnected, mutually reinforcing processes [see e.g. @dijkerman2007; @lederman2009]. As a consequence, the most effective learning strategies tend to involve "learning by doing"; passive observation is less effective [@hackathorn2011; @reese2011]. As the saying goes, seeing is believing, but how much is that belief really worth if you can't put your finger on it?
 
-Naturally, statisticians would eventually come to exploit this connection between perception and action as well, just as they had done with visual perception alone. In the latter half of the twentieth century, the development of computer graphics and interactive data visualization transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. Suddenly, it became possible to directly manipulate the visual representation of the data in real time, such that new visual insights could be obtained at the stroke of a key or click of a button.
+Naturally, statisticians would eventually come to exploit this connection between action and perception as well, just as they had done with visual perception alone. In the latter half of the twentieth century, the development of computer graphics, and interactive data visualization in particular, transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. Suddenly, users could directly manipulate the visual representation of the data in real time, uncovering new insights with a keystroke or a mouse click.
 
-The power of interactive data visualization quickly established it as one of the most popular ways of presenting data. Today, interactive graphics make frequent appearance in online news articles, on government websites, and in commercial dashboards. Similarly, data science developer ecosystems abound with software packages and tools for creating interactive graphics. As such, given its ubiquity, it may seem as though interactive data visualization is a "solved problem".
+The power of interactive data visualization quickly established it as one of the most popular ways of presenting data. Today, interactive graphics make frequent appearance in online news articles, on government websites, and in commercial dashboards. Similarly, data science developer ecosystems are flush with software for creating interactive graphics. Thus, given its ubiquity, it may seem as though interactive data visualization is a "solved problem".
 
-Yet, a number of unresolved issues surrounding the use and understanding interactive figures remain. Although large organizations favor interactive data visualizations, individual analysts seldom integrate them into their workflows [see e.g. @batch2017]. Moreover, despite the development of a wide array of sophisticated interactive features over the years, only a small fraction of them make it into widely available software (see Section \@ref(background)). Finally, a core underlying issue is that of data pipelines: how do we go about transforming raw data into something that can be visualized interactively, in a simple yet efficient manner [@wickham2009; @vanderplas2020]?
+Yet, a number of unresolved issues surrounding the use and understanding interactive figures remain. While favored by large organization, individual analysts rarely integrate interactive data visualization into their workflows [see e.g. @batch2017]. Further, despite years of research and development into sophisticated interactive features, only a small fraction of them make it into widely available, general software (see Section \@ref(background)). Finally, a core underlying issue that remains to be solved is that of data pipelines: how do we go about modeling process of transforming raw data into something that can be interactively visualized, in a simple and efficient manner [see e.g. @wickham2009; @vanderplas2020]?
 
-In this thesis, I explore these gaps and try to identify the underlying issues which make the development of interactive data visualization systems challenging. A recurring theme will be that, although plots are visual entities composed of geometric objects, they are not mere pictures. Instead, they contain a significant amount of implicit, algebraic structure, which becomes particularly apparent when interaction enters the scene. By focusing on the algebraic structure underlying plots, I build upon the work of Leland Wilkinson, and the Grammar of Graphics (GoG) model in particular [-@wilkinson2012]. However, I contend that, while offering a foundational framework, to fully encompass the scope of interactive graphics, the GoG model warrants certain refinements. To make the point rather bluntly, I want to draw attention to the following two quotes:
+In this thesis, I explore these gaps the challenges that come up when developing interactive data visualization systems. A recurring theme will be that, although plots are visual entities composed of geometric objects, they are not mere pictures. Instead, they contain a significant amount of implicit, algebraic structure, which becomes particularly relevant when interaction is introduced. By focusing on the this algebraic foundation, I build upon the work of Leland Wilkinson, and the Grammar of Graphics (GoG) model in particular [-@wilkinson2012]. However, I contend that while GoG offers a foundational framework, to fully encompass the scope of interactive graphics it may require certain refinements. To put it bluntly, consider the following two quotes:
 
 > "This system cannot produce a meaningless graphic, however. This is a strong claim, vulnerable to a single counter-example. It is a claim based on the formal rules of the system, however, not on the evaluation of specific graphics it may produce."
 >
@@ -121,13 +121,13 @@ In this thesis, I explore these gaps and try to identify the underlying issues w
 >
 > @wilkinson2012, pp. 15 and 112
 
-What makes some combinations of graphics and statistics meaningful, while others degenerate or bizarre? I believe that answering this question is essential for building coherent interactive data visualization systems. Arguably, summary statistics and their properties are a somewhat overlooked part of the GoG model^[See also the following quote: "I have tried to build the argument, except for the statistical methods in Chapter 7, from elementary definitions.", pp. 10 of the first-edition preface.]; however, I contend that, when developing interactive data visualizations, grappling with them is essential.
+What makes some combinations of graphics and statistics meaningful, while others degenerate or bizarre? I believe that answering this question is essential for building coherent data visualization systems, particularly interactive ones. Specifically, statistics may be a somewhat overlooked part of the GoG model^[See also the following quote: "I have tried to build the argument, except for the statistical methods in Chapter 7, from elementary definitions.", pp. 10 of the first-edition preface.]; however, I contend that, when developing interactive data visualizations, grappling with their properties is essential.
 
-Specifically, I argue that what we can *do* with a graphic is fundamentally determined what the graphics *is*, and summary statistics are an unavoidable part of that. Certain types of plots exhibit a special kind of congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other types of plots break this congruence, making implementing certain interactive features challenging. However, what is this congruence? To describe it formally, I propose a model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. These concepts, and my application of them, extends beyond the model developed by @wilkinson2012. Specifically, unlike GoG, which treats data, statistics, and graphics as entirely independent, modular components, I propose a compositional model which focuses on preserving key mathematical properties.
+The main thrust of my argument is that what we can *do* with a graphic is fundamentally determined what the graphics *is*, and summary statistics are an inseparable part of that. Specifically, certain types of plots exhibit a special congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other types of plots break this congruence, making certain interactive features challenging to implement. Exploring this congruence is one of the main tasks of the present thesis. To describe it formally, I propose a simple model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. Importantly, these concepts, and my application of them, extends beyond GoG [@wilkinson2012]. Specifically, while GoG treats data, statistics, and graphics as entirely independent, modular components, I instead propose a compositional model which focuses on preserving key mathematical properties.
 
-Finally, developing theory is all well and good, but it would be for naught if it did not lead to practical, actionable insights. The end-goal of this work was to provide answers to applied problems that arise when developing interactive data visualization systems. Therefore, to validate and refine the theoretical findings, I also develop an original open-source interactive data visualization library, `plotscaper` (https://github.com/bartonicek/plotscaper). Consequently, parts of this thesis are dedicated to the design and architecture of this system, as well as its application to real-world data. Throughout these sections, I repeatedly explore and elaborate on the connections between the theory and its practical application. 
+Finally, since interactive data visualization is a very much an applied discipline, developing theory would be pointless if it did not lead to practical, actionable insights. Therefore, to validate and refine the theoretical findings, I also develop an original open-source interactive data visualization library, `plotscaper` (https://github.com/bartonicek/plotscaper). Consequently, parts of this thesis are dedicated to the design and architecture of this system, as well as its application to real-world data. Throughout these sections, I repeatedly explore and elaborate on the connections between the mathetmatical theory and its practical application. 
 
-Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take both the theory and practice into account. To reiterate the key point, what we can *do* with a visualization is predicated on what the visualization *is*, and algebraic concepts provide a uniquely powerful tool for describing this.  
+Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take the underlying algebraic relationships into account. Only by properly describing what a plot *is* can we begin to reason about what we can *do* with it.
 
 #### Structure of the thesis
 
