--- a/references.bib
+++ b/references.bib
@@ -4276,6 +4276,25 @@
   year		= {1989},
   publisher	= {Taylor \& Francis}
 }
+@inproceedings{leff2001,
+  title={Web-application development using the model/view/controller design pattern},
+  author={Leff, Avraham and Rayfield, James T},
+  booktitle={Proceedings fifth ieee international enterprise distributed object computing conference},
+  pages={118--127},
+  year={2001},
+  organization={IEEE}
+}
+
+@article{krasner1988,
+  title={A description of the model-view-controller user interface paradigm in the smalltalk-80 system},
+  author={Krasner, Glenn E and Pope, Stephen T and others},
+  journal={Journal of object oriented programming},
+  volume={1},
+  number={3},
+  pages={26--49},
+  year={1988}
+}
+
 
 @article{henderson1981,
   title={Building multiple regression models interactively},
